tests/error/comprehension_errors/borrow_after_consume.err
Error: Copy violation (at $FILE:21:16)
   | 
19 | @guppy(module)
20 | def foo(qs: list[qubit] @owned) -> list[int]:
21 |     return [baz(q) for q in qs if bar(q)]
   |                 ^ Variable `q` with non-copyable type `qubit` cannot be
   |                   borrowed ...
   | 
21 |     return [baz(q) for q in qs if bar(q)]
   |                                       - since it was already consumed here

Guppy compilation failed due to 1 previous error
